# Design-Patterns-Freeuni

./: .gitignore.txt  README.md  README.md.txt
Health-App-Backend_API/: JustTest.py  README.md.txt  pyproject.toml
Health-App-Backend_API/app/: some_exceptions.py
Health-App-Backend_API/app/api/: handle_requests.py  schemas.py
Health-App-Backend_API/app/models/: base_habit.py  boolean_habit.py  group_habits.py  habit_types.py  logs.py  numeric_habit.py
Health-App-Backend_API/app/services/: habit_service.py  log_service.py
Health-App-Backend_API/tests/: habit_service_tests.py  log_service_tests.py  model_tests.py
Spore-Game-Simulation/: BodyParts.py  BoostAbilities.py  ChasePhase.py  Claw.py  Creature.py  EvolutionPhase.py  FightPhase.py  GameSimulation.py  Leg.py  Movement.py  README.md.txt  Teeth.py  Wing.py  mypy.ini  pyproject.toml
Spore-Game-Simulation/tests/: TestAttack.py  TestChase.py  TestFight.py  TestMovement.py
Weather-Monitoring-System/: README.md.txt  handle_alerts.py  humidity_alert.py  pyproject.toml  temperature_alert.py  weather_display.py  weather_simulation.py  weather_station.py  wind_speed_alert.py
Weather-Monitoring-System/tests/: test_alert_handlers.py  test_weather_station.py
