[project]
name = "spore"
version = "0.1.0"
description = "Spore game simulation"
requires-python = ">=3.13"
[tool.ruff]
target-version = "py313"
line-length = 79
exclude = ["build", "dist", ".venv", ".git", "__pycache__"]

select = ["E", "F"]
ignore = ["E501"]
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"